Addit. styles on Submit button Issue #22671
Previously, the submit button did not look big enough in comparison to
their current submit button.  So I have further increased the size.

--- a/sites/all/themes/cc_zen/sass/components/_donate.scss
+++ b/sites/all/themes/cc_zen/sass/components/_donate.scss
@@ -5,11 +5,11 @@
 
   #crm-container {
     .crm-submit-buttons {
-      height: 35px;
+      height: 40px;
     }
 
     .crm-button input.form-submit {
-      padding: 4px 6px;
+      padding: 8px 10px;
     }
 
     .other_amount-section input {
